--- a/mision.html
+++ b/mision.html
@@ -11,7 +11,7 @@
         <h2 id="titulo" class="name"> SamartBuy</h2>
         <img src="../imagenes/diamond.png" class="izquierda" id="imgen" width="35px">
         <ul>
-            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="index.html">Inicio</a></li>
             <li><a href="mision.html">Misión</a></li>
             <li><a href="vision.html">Visión</a></li>
             <li><a href="servicios.html">Productos</a></li>
@@ -22,20 +22,30 @@
 </header>
 
 <body>
+    <article>
+        <section>
+            <div class="back">
+                <br>
+                <br>
+                <div align="center">
+                    <h1>Misión SamartBuy</h1>
+                </div>
+                <img src="../imagenes/grupotrabajo.jpg" class="derecha marimg" width="445px">
+                <p ALIGN=center>La Misión de SmartBuy es “ser la mejor tienda detallista, con un gran surtido de productos de alta calidad y con los precios bajos tanto en EUA, Mexico y Centroamérica, donde cuenta con el mayor número de sucursales, como en cualquiera
+                    de los 9 países donde tiene operaciones.”</p>
+                <br><br>
+                <br><br>
+                <br><br>
+                <br><br>
+                <br><br>
+            </div>
+        </section>
+    </article>
+    <br><br>
+    <br><br>
+    <br><br>
     <br>
-    <br>
-    <br>
-    <form action="">
-        <div class="back">
-            <h1 aling="center" id="h1form">Contactanos</h1><br>
-            <input type="text" name="nombre" placeholder="Nombre completo">
-            <input type="text" name="correo" placeholder="Correo electrónico">
-            <input type="text" name="telefono" placeholder="Teléfono">
-            <textarea name="mensaje" placeholder="Escriba su mensaje"></textarea>
-            <input type="buttom" value="ENVIAR" id="boton">
-        </div>
-    </form>
-    <br> <br> <br> <br><br>
+
     <footer>
         <div class="footer-conent" align="center">
             Universidad Mariano Galvez de Guatemala Infeneria en sistemas de la informacion. Concluyendo el proyecto grupal con los integrantes: Mario Rodas, Saulo Esteba,. William Salguero y Oscar Gomez para el curso de introduccion a los sistemas de computo.
