--- a/vision.html
+++ b/vision.html
@@ -11,7 +11,7 @@
         <h2 id="titulo" class="name"> SamartBuy</h2>
         <img src="../imagenes/diamond.png" class="izquierda" id="imgen" width="35px">
         <ul>
-            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="index.html">Inicio</a></li>
             <li><a href="mision.html">Misión</a></li>
             <li><a href="vision.html">Visión</a></li>
             <li><a href="servicios.html">Productos</a></li>
@@ -25,46 +25,36 @@
     <article>
         <section>
             <div class="back">
-                <h1 ALIGN=center>Integrantes grupo numero 5</h1>
                 <br>
                 <br>
-                <table>
-                    <tr>
-                        <th>Mario Rodas</th>
-                        <th>Saulo Esteban</th>
-                        <th>Daniel Salguero</th>
-                        <th>Oscar Moran</th>
-                    </tr>
-                    <tr>
-                        <td>
-                            <img src="../imagenes/mario.jpg" alt="100px" height="400" width="350" title="Mario" />
-                        </td>
-                        <td>
-                            <img src="../imagenes/saulo.jpg" alt="100px" height="400" width="350" title="Saulo" />
-                        </td>
-                        <td>
-                            <img src="../imagenes/salguero.jpg" alt="100px" height="400" width="350" title="Salguero" />
-                        </td>
-                        <td>
-                            <img src="../imagenes/oscar.jpg" alt="100px" height="400" width="350" title="Oscar" />
-                        </td>
-                    </tr>
-                </table>
+                <h1>Visión SamartBuy</h1>
+                <img src="../imagenes/grupomaxi.jpg" alt="100px" class="izquierda marimg" width="445px">
+                <p ALIGN=center>La Visión de SmartBuy es convertir a Wal-Mart en la mejor y más grande empresa detallista del mundo, a través de ofrecer a tiempo los mejores productos y brindar un servicio de excelencia.</p>
                 <br>
-                <br>
-                <br>
-                <br>
-                <br>
+                <br><br>
+                <br><br>
+                <br><br>
+                <br><br>
+                <br> <br>
+                <br><br>
+
             </div>
         </section>
     </article>
+
+    <br> <br>
+    <br><br>
+    <br> <br>
+    <br><br>
+    <br><br>
     <footer>
         <div class="footer-conent" align="center">
             Universidad Mariano Galvez de Guatemala Infeneria en sistemas de la informacion. Concluyendo el proyecto grupal con los integrantes: Mario Rodas, Saulo Esteba,. William Salguero y Oscar Gomez para el curso de introduccion a los sistemas de computo.
         </div>
     </footer>
-
 </body>
+
+
 
 
 </html>
