--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <ul>
 
             <li><a href="index.html">Inicio</a></li>
-            <li><a href="page/mision.html">Misión</a></li>
-            <li><a href="page/vision.html">Visión</a></li>
-            <li><a href="page/servicios.html">Productos</a></li>
-            <li><a href="page/formulario.html">Contactanos</a></li>
-            <li><a href="page/grupo.html">Grupo</a></li>
+            <li><a href="mision.html">Misión</a></li>
+            <li><a href="vision.html">Visión</a></li>
+            <li><a href="servicios.html">Productos</a></li>
+            <li><a href="formulario.html">Contactanos</a></li>
+            <li><a href="grupo.html">Grupo</a></li>
         </ul>
     </nav>
 </header>
