--- a/servicios.html
+++ b/servicios.html
@@ -11,7 +11,7 @@
         <h2 id="titulo" class="name"> SamartBuy</h2>
         <img src="../imagenes/diamond.png" class="izquierda" id="imgen" width="35px">
         <ul>
-            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="index.html">Inicio</a></li>
             <li><a href="mision.html">Misión</a></li>
             <li><a href="vision.html">Visión</a></li>
             <li><a href="servicios.html">Productos</a></li>
